--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         </div>
 
         <div class="project-card">
-          <img src="images/project3.webp" alt="Project 3 Screenshot">
-          <h3>Project Three</h3>
-          <p>A responsive portfolio website designed to showcase my work, with a modern UI built using HTML, CSS, and JavaScript.</p>
-          <a href="https://github.com/yourusername/project3" target="_blank" rel="noopener noreferrer">View Code</a>
+          <img src="images/portfolio.png" alt="Portfolio">
+          <h3>Portfolio</h3>
+          <p>A responsive portfolio website designed to showcase my work, with a modern UI built using HTML and CSS</p>
+          <a href="https://github.com/naimurerahaman/github-portfolio" target="_blank" rel="noopener noreferrer">View Code</a>
         </div>
       </div>
     </section>
@@ -161,18 +161,19 @@
          </p>
         </div>
 
-        <form>
+        <form action="sendmail.php" method="POST">
           <label for="name">Name</label>
-          <input type="text" id="name">
+          <input type="text" id="name" name="name" required>
 
           <label for="email">Email</label>
-          <input type="email" id="email">
+          <input type="email" id="email" name="email" required>
 
           <label for="message">Message</label>
-          <textarea id="message" cols="30" rows="10"></textarea>
+          <textarea id="message" name="message" cols="30" rows="10" required></textarea>
 
           <button type="submit">Send Message</button>
         </form>
+
       </div>
     </section>
   </main>
