added new project

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         </div>
 
         <div class="project-card">
-          <img src="images/project2.webp" alt="Project 2 Screenshot">
-          <h3>Project Two</h3>
-          <p>An e-commerce platform developed with Laravel and PHP. Features include a shopping cart, payment system, and user authentication.</p>
-          <a href="https://github.com/yourusername/project2" target="_blank" rel="noopener noreferrer">View Code</a>
+          <img src="images/Talk-About.png" alt="Talk-About Screenshot">
+          <h3>Talk About</h3>
+          <p>This is a QnA website, where users can ask and answer questions amongst them.</p>
+          <a href="https://github.com/naimurerahaman/Talk-About" target="_blank" rel="noopener noreferrer">View Code</a>
         </div>
 
         <div class="project-card">
